fix: max width to 100 on mobile view for h3 tags

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -196,7 +196,11 @@ input, select, textarea {
 			width: max-content;
 			padding-bottom: 0.5rem;
 			margin: 0 0 2rem 0;
-		}
+    }
+    
+    h3.major-max {
+      width: 100%;
+    }
 
 	h1 {
 		font-size: 2.25rem;
